 * Support for DVD and Blu-Ray writing via cdrecord
 * New audio ripping pattern %e which is replaced by the file extension
 
Changes (since 2.0-beta1):
 * K3bSetup ported to KAuth framework
 
Bugfixes (since 2.0-beta1):
 * Crash on start of Audio Ripping Dialog (226595)
 * Fixed ordering of files added to Audio Project (224649)
 * Fixed too wide Image Burn Dialog when file path was long (225735)

2.0-beta1 (1.70)
================
Changes:
 * Added Blu-ray support
 * Added "Options" button to file browser toolbar with view options menu (e.g. "Show Hidden Files") (196992)
 * Image and project files can be opened directly from K3b file browser
 * Using Oxygen icons (many thanks for Oxygen Team!)

Bugfixes:
 * Fixed visual glitch when panes are in "locked" state. Patch by Craig Drummond <craig@kde.org>
 * Fixed hang up when "Create Image" option is checked (217301)
 * "Hide main window while writing" option is working again
 * "Show OSD progress" option is working again
 * Improved message when ISO with incorrect size is detected (216812)
 * Improved consistency: K3b now uses system-wide Positive/Neutral/Negative colors where possible instead of hard-coded green/yellow/red
 * Fixed incorrect default value "4gb." in "Custom Size" dialog (215539)
 * Fixed usability issues with project size menu: "Custom..." and "From Medium..." menu entries are non-checkable now (215539)
 * Show correct message at the end of CD-RW erasing (207972)
 * Fixed issue with too small configuration dialog for external encoder (218613)
 * Track number is now stored in ripped MP3 files when using lame (218614)
 * "Defaults" button in encoder configuration dialogs are working now
 * Fixed usability problems of audio project list
 * Fixed linking error on Windows
 * Fixed crash during verification process (219962)
 * Fixed crash in external encoder plug-in
 * Brought back SOX encoder configuration dialog
 * Fixed checking free space in temporary folder
 * Fixed videodvd:/ KIO slave