@@ -27,6 +27,7 @@ Bugfixes (since 2.0-beta1):
  * Crash on start of Audio Ripping Dialog (226595)
  * Fixed ordering of files added to Audio Project (224649)
  * Fixed too wide Image Burn Dialog when file path was long (225735)
+ * Fixed crash when creating image files for AudioCD project (219500)
 
 2.0-beta1 (1.70)
 ================
